# mesp-match-demo

./: CLAUDE.md  PLANNING.md  pyproject.toml  vercel.json
.claude/: settings.local.json
app/: eslint.config.js  package-lock.json  package.json
app/public/dados/: amostras.json  busca_indice.json  familias.json  itens.json  painel.json  porte.json  relatorio_sneaelis.xlsx
app/src/: App.tsx  main.tsx
app/src/assets/styles/: global.css
app/src/components/BarraNiveis/: BarraNiveis.module.css  BarraNiveis.tsx  index.ts
app/src/components/Button/: Button.module.css  Button.tsx
app/src/components/CardItem/: CardItem.module.css  CardItem.tsx
app/src/components/Chip/: Chip.module.css  Chip.tsx
app/src/components/Drawer/: Drawer.module.css  Drawer.tsx
app/src/components/FaixaPreco/: FaixaPreco.module.css  FaixaPreco.tsx  index.ts
app/src/components/Input/: Input.module.css  Input.tsx
app/src/components/Layout/: Layout.module.css  Layout.tsx
app/src/components/MemoriaCalculo/: MemoriaCalculo.module.css  MemoriaCalculo.tsx  index.ts
app/src/components/NotaHonesta/: NotaHonesta.module.css  NotaHonesta.tsx  index.ts
app/src/components/PrecoHero/: PrecoHero.module.css  PrecoHero.tsx  index.ts
app/src/contexts/: DadosContext.tsx  SessaoContext.tsx
app/src/hooks/: useBusca.ts  useDebounce.ts  useReducedMotion.ts  useTema.ts
app/src/lib/: formato.ts  niveis.ts  normalizar.ts
app/src/types/: index.ts
scripts/: exportar_dados.py
specs/: context.md  design-esneaelis.md  spec-1.md  spec-2.md  spec-3.md  spec-4.md  spec-5.md  spec-6.md  spec-7.md
(+37 files in other folders)
